# Rust-BLAS

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: blas1.rs  lib.rs
src/blas1/: axpy.rs  scal.rs
